-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.12.0, Lustre 2.13.0
-
None
-
3
-
9223372036854775807
This seems to be a return of LU-7430 and a few other similar bugs, but happening on current master.
[291606.098200] Lustre: DEBUG MARKER: == replay-ost-single test 7: Fail OST before obd_destroy ============================================= 23:53:41 (1501300421) [291616.783248] Lustre: DEBUG MARKER: before: 623720 after_dd: 618600 took 1 seconds [291617.134646] LustreError: 28072:0:(osd_handler.c:2184:osd_ro()) *** setting lustre-OST0000 read-only *** [291617.152901] Turning device loop1 (0x700001) read-only [291617.224927] Lustre: DEBUG MARKER: ost1 REPLAY BARRIER on lustre-OST0000 [291617.277436] Lustre: DEBUG MARKER: local REPLAY BARRIER on lustre-OST0000 [291617.590847] Lustre: Failing over lustre-OST0000 [291617.601802] LustreError: 22375:0:(tgt_lastrcvd.c:440:tgt_client_free()) ASSERTION( lut && lut->lut_client_bitmap ) failed: [291617.602975] LustreError: 22375:0:(tgt_lastrcvd.c:440:tgt_client_free()) LBUG [291617.603578] Pid: 22375, comm: obd_zombid [291617.604096] Call Trace: [291617.606669] [<ffffffffa02857ce>] libcfs_call_trace+0x4e/0x60 [libcfs] [291617.607349] [<ffffffffa028585c>] lbug_with_loc+0x4c/0xb0 [libcfs] [291617.608122] [<ffffffffa05ddde2>] tgt_client_free+0x2a2/0x360 [ptlrpc] [291617.608814] [<ffffffffa0db5b12>] ofd_destroy_export+0x62/0x180 [ofd] [291617.609551] [<ffffffffa0389239>] obd_zombie_impexp_cull+0x549/0x920 [obdclass] [291617.622563] [<ffffffffa038967d>] obd_zombie_impexp_thread+0x6d/0x1c0 [obdclass] [291617.628967] [<ffffffff810b7cc0>] ? default_wake_function+0x0/0x20 [291617.629676] [<ffffffffa0389610>] ? obd_zombie_impexp_thread+0x0/0x1c0 [obdclass] [291617.631230] [<ffffffff810a2eba>] kthread+0xea/0xf0 [291617.631906] [<ffffffff810a2dd0>] ? kthread+0x0/0xf0 [291617.632572] [<ffffffff8170fb98>] ret_from_fork+0x58/0x90 [291617.633236] [<ffffffff810a2dd0>] ? kthread+0x0/0xf0 [291617.639601] [291617.640036] Kernel panic - not syncing: LBUG [291617.640462] CPU: 4 PID: 22375 Comm: obd_zombid Tainted: P OE ------------ 3.10.0-debug #2 [291617.641354] Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011 [291617.641830] ffffffffa02a4ed2 0000000025d32961 ffff8800a16b3cc0 ffffffff816fd3e4 [291617.642712] ffff8800a16b3d40 ffffffff816f8c34 ffffffff00000008 ffff8800a16b3d50 [291617.644582] ffff8800a16b3cf0 0000000025d32961 0000000025d32961 ffff88033e48d948 [291617.645811] Call Trace: [291617.646408] [<ffffffff816fd3e4>] dump_stack+0x19/0x1b [291617.647142] [<ffffffff816f8c34>] panic+0xd8/0x1e7 [291617.647765] [<ffffffffa0285874>] lbug_with_loc+0x64/0xb0 [libcfs] [291617.648540] [<ffffffffa05ddde2>] tgt_client_free+0x2a2/0x360 [ptlrpc] [291617.649224] [<ffffffffa0db5b12>] ofd_destroy_export+0x62/0x180 [ofd] [291617.649911] [<ffffffffa0389239>] obd_zombie_impexp_cull+0x549/0x920 [obdclass] [291617.651165] [<ffffffffa038967d>] obd_zombie_impexp_thread+0x6d/0x1c0 [obdclass] [291617.652377] [<ffffffff810b7cc0>] ? wake_up_state+0x20/0x20 [291617.653065] [<ffffffffa0389610>] ? obd_zombie_impexp_cull+0x920/0x920 [obdclass] [291617.654285] [<ffffffff810a2eba>] kthread+0xea/0xf0 [291617.654920] [<ffffffff810a2dd0>] ? kthread_create_on_node+0x140/0x140 [291617.655610] [<ffffffff8170fb98>] ret_from_fork+0x58/0x90 [291617.656262] [<ffffffff810a2dd0>] ? kthread_create_on_node+0x140/0x140
Crasydump on onyx-68 in /exports/crashdumps/192.168.123.181-2017-07-28-23:53:59
Modules also there.